# Shelter-protocol

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
pcgame/: CMakeLists.txt  README.md
pcgame/.github/workflows/: build-windows.yml
pcgame/shaders/: floor.frag  object.frag  object.vert
pcgame/src/: game_types.h  shader.h
src/: main.cpp  mesh.h  mini_math.h  shader.h  vector_text.h
